fix 2060,2318,2319: extension for aggregation method; support for dates/times and data cell collections (step4)